@@ -14,12 +14,12 @@ public class NotifyAccountTest {
 
     @Test
     public void sent() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("142", "Petr Arsentev", "000001")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("123", "Petr Arsentev", "eDer3432f"),
                         new Account("142", "Petr Arsentev", "000001")
                 )
@@ -29,11 +29,11 @@ public class NotifyAccountTest {
 
     @Test
     public void whenHasDuplicate() {
-        assertThat(NotifyAccount.sent(new ArrayList<>(Arrays.asList(
+        assertThat(NotifyAccount.sent(new ArrayList<>(List.of(
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("163", "Petr Arsentev", "eDer3432f")))),
-                is(new HashSet<>(Arrays.asList(
+                is(new HashSet<>(List.of(
                         new Account("123", "Petr Arsentev", "eDer3432f"),
                         new Account("163", "Petr Arsentev", "eDer3432f")
                 ))));
